Prevented eventlog from overflowing too much and changed energy level color to white

--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@ body {
     width: 1200px;
     height: 500px;
     margin: auto;
+    position: relative;
 }
 
 .TopHalf {
